influx/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: influx-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: 20g-pv-claim
    - name: certs-pv-storage
      persistentVolumeClaim:
        claimName: 1g-pv-claim	
  containers:
    - name: task-pv-container
      image: "quay.io/influxdb/influxdb:v2.0.2"
      command: ["/entrypoint.sh","--tls-cert=/certs/fullchain1.pem", "--tls-key=/certs/privkey1.pem"]
      ports:
        - containerPort: 8086
          name: "influx-server"
      volumeMounts:
        - mountPath: "/root/.influxdbv2"
          name: task-pv-storage
        - mountPath: "/certs"
          name: certs-pv-storage
