influx/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: influx-service
spec:
  selector:
    app: influx
  ports:
  # Default port used by the image
  - port: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influx-ingress
spec:
  rules:
  - https:
      paths:
      - path: /
        backend:
          serviceName: influx-service
          servicePort: 8086
---
